--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
 certifi==2019.6.16
+cffi==1.12.3
 chardet==3.0.4
 Click==7.0
 Flask==1.1.1
+gevent==1.4.0
+greenlet==0.4.15
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
 Pillow==6.1.0
+pycparser==2.19
 requests==2.22.0
 urllib3==1.25.3
 virtualenv==16.6.2
