--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,23 @@
-app==0.0.1
 certifi==2019.6.16
 cffi==1.12.3
 chardet==3.0.4
 Click==7.0
 Flask==1.1.1
-Flask-Ext==0.1
-get==2019.4.13
+flask-marshmallow==0.10.1
+Flask-SQLAlchemy==2.4.0
 gevent==1.4.0
 greenlet==0.4.15
+gunicorn==19.9.0
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
-mysql==0.0.2
-mysql-connector==2.2.9
-mysqlclient==1.4.2.post1
-Pillow==6.1.0
-post==2019.4.13
-public==2019.4.13
+marshmallow==3.0.0rc8
+psycopg2==2.8.3
 pycparser==2.19
-query-string==2019.4.13
-request==2019.4.13
 requests==2.22.0
+six==1.12.0
+SQLAlchemy==1.3.5
 urllib3==1.25.3
-virtualenv==16.6.2
-virtualenvwrapper-win==1.2.5
+v==0.0.0
 Werkzeug==0.15.5
