--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,30 @@
+app==0.0.1
 certifi==2019.6.16
+cffi==1.12.3
 chardet==3.0.4
 Click==7.0
+coverage==4.5.4
 Flask==1.1.1
+Flask-Cors==3.0.8
+Flask-Ext==0.1
 get==2019.4.13
+gevent==1.4.0
+greenlet==0.4.15
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
+mysql==0.0.2
 mysql-connector==2.2.9
+mysqlclient==1.4.2.post1
+Pillow==6.1.0
 post==2019.4.13
 public==2019.4.13
+pycparser==2.19
 query-string==2019.4.13
 request==2019.4.13
 requests==2.22.0
+six==1.12.0
 urllib3==1.25.3
 virtualenv==16.6.2
 virtualenvwrapper-win==1.2.5
