--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
 cache: pip
 install:
   - pip install -r requirements.txt
+  - pip install coverage
 script:
   - python unitTest.py
   - coverage report -m unitTest.py
