--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ install:
   - pip install -r requirements.txt
   - pip install coveralls
 script:
-  #- python unitTest.py
-  - coverage report -m unitTest.py
+  - python unitTest.py
+  - coverage run unitTest.py
